<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.result.FoodNameFragment">

        <TextView
            android:id="@+id/foodNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:fontFamily="@font/montserrat"
            android:text="What's my name?"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/foodPic"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameTitle"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/foodNameView"
            android:layout_width="300dp"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:background="#4F4F4F"
            android:fontFamily="@font/montserrat"
            android:text="Food Name"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodPic" />

        <Button
            android:id="@+id/listenButton"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat"
            android:text="Listen"
            android:textAllCaps="false"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/leftButton"
            android:layout_width="75dp"
            android:layout_height="64dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/left"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rightButton"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="75dp"
            android:layout_height="64dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/right"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline4"
            app:layout_constraintVertical_bias="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="300dp"
            android:layout_height="64dp"
            android:fontFamily="@font/montserrat"
            android:textAllCaps="false"
            android:text="@string/new_picture"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rightButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>